# tidyexc

./: CHANGELOG.md  README.rst  pyproject.toml
.github/workflows/: test_and_release.yml
docs/: Makefile  api_reference.rst  basic_usage.rst  conf.py  index.rst  parse_xy_coords.py
docs/api/: tidyexc.Error.rst  tidyexc.only_raise.rst
tests/: test_exc.py  test_utils.py  test_views.py
tidyexc/: __init__.py  exc.py  utils.py  views.py
