[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "tidyexc"
author = "Kale Kundert"
author-email = "kale@thekunderts.net"
home-page = 'https://github.com/kalekundert/tidyexc'
description-file = 'README.rst'
requires-python = "~=3.6"
requires = [
]
classifiers = [
  'Programming Language :: Python :: 3',
  'License :: OSI Approved :: MIT License',
]

[tool.flit.metadata.requires-extra]
test = [
  'pytest',
  'pytest-cov',
  'coveralls',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'autoclasstoc',
]

[tool.flit.metadata.urls]
'Documentation' = 'https://tidyexc.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/tidyexc'
'Bug Tracker' = 'https://github.com/kalekundert/tidyexc/issues'
'Continuous Integration' = 'https://github.com/kalekundert/tidyexc/actions'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/tidyexc'

[tool.pytest.ini_options]
python_files = 'test_*.py parse_xy_coords.py'
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'

[tool.pccc]
header_length = 72
types = ["chore", "docs", "feat", "fix", "refactor", "style", "test"]
ignore_generated_commits = true
generated_commits = ['^Merge']

[tool.semantic_release]
version_variable = 'tidyexc/__init__.py:__version__'
build_command = 'python -m pip install flit && flit build'
